--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@
 
         .button1 {
             padding: 10px 24px;
-          box-shadow: 10px 10px 23px -13px rgba(38,38,38,1);
+          /* box-shadow: 10px 10px 23px -13px rgba(38,38,38,1); */
+          box-shadow: 10px 10px 10px -4px rgba(38,38,38,0.42);
         }
 
         .W50 {
