--- a/css/style.css
+++ b/css/style.css
@@ -165,12 +165,13 @@ opacity: 1;
         }
 
         .secondDiv{
-          padding-top: 90px;
+          padding-top: 60px;
           padding-bottom: 60px;
             margin-left: 36px;
         }
         .secDiv{
           margin-left: -10px;
+          padding-top: 20px;
         }
         .thirdDiv{
           text-align: center;
@@ -254,18 +255,44 @@ opacity: 1;
                margin-top: 30px;
                background: #ECECEC 0% 0% no-repeat padding-box;
                padding: 10px;
-               padding-left: 36px;
-              
-opacity: 1;
+               padding-left: 36px;           
+               opacity: 1;
              }
              .footerText{
                font-size: 10px;
-             
                letter-spacing: 0px;
-color: #828282;
-opacity: 1;
-               
+               color: #828282;
+               opacity: 1;
              }
+             .formSec{
+               padding-left: 40px;
+               padding-right: 40px;
+             }
+             .tounch{
+               font-size: 22px;
+               font-weight: 700;
+               color: #ffffff;
+               text-align: center;
+             }
+             .formDiv{
+               padding-top: 40px;
+             }
+             .form-control{
+               border-radius: 5px;
+             }
+             .mheader{
+               text-align: center;
+               padding-top: 20px;
+             }
+             .mtitle{
+               text-align: center;
+               font-weight: 900;
+               font-size: 25px;
+               color: #0089D2;
+               text-transform: capitalize;
+             }
+             .modal{padding: 20px;
+            border-radius: 40px;}
       
   
 
@@ -277,6 +304,7 @@ opacity: 1;
 
  body{
    background-image: url('../assets/bg.jpg');
+   background-image: cover;
  }
 
  :root {
