--- a/css/style.css
+++ b/css/style.css
@@ -316,10 +316,13 @@ opacity: 1;
                font-size: 25px;
                color: #0089D2;
                text-transform: capitalize;
+               font-family: 'Poppins';
+
              }
              .modal{
                padding: 20px;
-            border-radius: 40px;}
+               border-radius: 40px;
+              }
       
   
 
