--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ opacity: 1;
              .mtitle{
                text-align: center;
                font-weight: 900;
-               font-size: 25px;
+               font-size: 22px;
                color: #0089D2;
                text-transform: capitalize;
                font-family: 'Poppins';
@@ -328,6 +328,7 @@ opacity: 1;
              .modal{
                padding: 20px;
                border-radius: 40px;
+               margin-top: 20%;
               }
               .active{
                 background-color:  #FF7200 !important;
